<resources>
    <string name="app_name">WaterLife</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="person">person</string>
    <string name="last_water">Осталось: %1$sL</string>
    <string name="currentWater">%1$sL</string>
    <string name="currentPercentage">${%1$2s}%</string>
    <string name="bottom_bar_dem">•</string>

    <string name="sunday">воскресенье</string>
    <string name="monday">понедельник</string>
    <string name="tuesday">вторник</string>
    <string name="wednesday">среда</string>
    <string name="thursday">четверг</string>
    <string name="friday">пятница</string>
    <string name="saturday">суббота</string>
    <string name="drink_water">Выпить воды</string>
    <string name="history">История</string>
    <string name="settings">Настройки</string>
</resources>